syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

option csharp_namespace = "NServiceBus.IntegrationTesting.OutOfProcess";
package NServiceBus.IntegrationTesting.TestRunner;

service OutOfProcessEndpointRunner {
    rpc OnEndpointStarted (EndpointStartedEvent) returns (google.protobuf.Empty);
    rpc RecordOutgoingMessageOperation (OutgoingMessageOperationEvent) returns (google.protobuf.Empty);
    rpc SetContextProperty(SetContextPropertyRequest) returns (google.protobuf.Empty);
}

message EndpointStartedEvent {
    string endpointName = 1;
}

message OutgoingMessageOperationEvent {
    string operationTypeAssemblyQualifiedName = 1;
    string senderEndpoint = 2;
    string messageId = 3;
    string messageTypeAssemblyQualifiedName = 4;
    string messageInstanceJson = 5;
    string messageHeadersJson = 6;
    string operationErrorJson = 7;
    string operationErrorTypeAssemblyQualifiedName = 8;
}

message SetContextPropertyRequest{
    string propertyName = 1;
    string propertyValue = 2;
    string endpointName = 3;
}