syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

option csharp_namespace = "NServiceBus.IntegrationTesting.OutOfProcess";
package NServiceBus.IntegrationTesting.TestRunner;

service TestRunner {
    rpc OnEndpointStarted (EndpointStartedEvent) returns (google.protobuf.Empty);
    rpc RecordOutgoingMessageOperation (OutgoingMessageOperationEvent) returns (google.protobuf.Empty);
}

message EndpointStartedEvent {
    string endpointName = 1;
}

message OutgoingMessageOperationEvent {
    string jsonOperation = 1;
    string jsonOperationType = 2;
}